@@ -1,3 +1,9 @@
+2010-01-22  Rudy Neeser  <rudy.neeser@gmail.com>
+
+	* vector.lisp (normalise): Provided a version that operates on
+	lists.
+	(normalise!): Provided a version that operates on lists.
+
 2009-12-18  Rudy Neeser  <rudy.neeser@gmail.com>
 
 	* package.lisp (#:l-math): Exported  *equivalence-tolerance*.
